[package]
name = "service-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = "0.12.4"
